# aircon-controller

./: .gitignore  README.md
firmware/: .clang-format  CMakeLists.txt
firmware/src/: CMakeLists.txt  logger.cpp  logger.hpp  lwipopts.h  main.cpp  ntp.cpp  ntp.hpp  rs485.cpp  rs485.hpp  rtc.cpp  rtc.hpp  wifi.cpp  wifi.hpp
logs/: rs485_2400b_7bit_1stop_on_off.txt  rs485_2400b_7bit_2stop_on_off.txt  rs485_2400b_8bit_1stop_on_off.txt  rs485_2400b_8bit_2stop_on_off.txt  rs485_4800b_7bit_1stop_on_off.txt  rs485_4800b_7bit_2stop_on_off.txt  rs485_4800b_8bit_1stop_on_off.txt  rs485_4800b_8bit_1stop_test_1.txt  rs485_4800b_8bit_1stop_test_1_decoded.txt  rs485_4800b_8bit_2stop_on_off.txt  rs485_9600b_7bit_1stop_on_off.txt  rs485_9600b_7bit_2stop_on_off.txt  rs485_9600b_8bit_1stop_on_off.txt  rs485_9600b_8bit_1stop_on_off_frame.txt
tools/: rs485.py
